--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -4,7 +4,7 @@
 
 \cc{TODO: ASPLOS reviewer suggestions~\cite{Wang2013b,Godefroid2017,Yan2017}.}
 
-\cc{TODO: Interesting recent work on Ocaml~\cite{Midtgaard2017}, jsfunfuzz, AFL, libFuzzer.}
+\cc{TODO: interesting recent work on Ocaml~\cite{Midtgaard2017}, jsfunfuzz, AFL, libFuzzer.}
 
 The random generation of test cases is a well established approach to the compiler validation problem. \cc{TODO: Reword as invisible grammar elements rather than nouns}~Prior approaches are surveyed in~\cite{Kossatchev2005,Boujarwah1997} and empirically contrasted in~\cite{Chen2014a}. The main question of interest is in how to efficiently generate codes which trigger bugs. There are two main approaches: \emph{program generation}, in which inputs are synthesized from scratch, typically by stochastic enumeration of a grammar; and \emph{program mutation}, in which existing codes are modified and mutated so as to identify anomalous behavior.
 
@@ -73,4 +73,5 @@ Compared to all these, our fuzzing approach is low cost, easy to develop, portab
 Deep Learning is a nascent field that is responsible for a multitude of breakthroughs in modeling rich, hierarchical datasets. The major milestones are reviewed in~\cite{Wang2017}, and methods in~\cite{Schmidhuber2014}. In software testing,
 machine learning has been successfully applied before on areas such as improving bug finding static analyzers~\cite{Heo2017,Koc2017}, repairing programs~\cite{Koukoutos2017a,White}, prioritizing test programs~\cite{Chen2017}, identifying buffer overruns~\cite{Choi2016}, and processing bug reports~\cite{Lam2016,Huo2016}.
 
-There is an increasing interest in mining source code repositories at large scale~\cite{Allamanis2013a,White2015a,Bird2009}. Previous studies have involved data mining of GitHub to analyze software engineering practices~\cite{Wu2014,Guzman2014,Baishakhi2014a,Vasilescu2015}, for example code generation~\cite{Zhang2015a}, code summarization~\cite{Allamanis2016}, comment generation~\cite{Wong2013}, and code completion~\cite{Raychev2014}. Previous applications of deep learning to compilers have involved program synthesis for performance benchmarking~\cite{Cummins2017a} and building optimization heuristics~\cite{Cummins2017b}. No work so far has exploited mined source code for test case generation. Ours is the first to do so~\cc{TODO: revise claim in light of TreeFuzz, Learn\&Fuzz, etc.}.
+There is an increasing interest in mining source code repositories at large scale~\cite{Allamanis2013a,White2015a,Bird2009}. Previous studies have involved data mining of GitHub to analyze software engineering practices~\cite{Wu2014,Guzman2014,Baishakhi2014a,Vasilescu2015}, for example code generation~\cite{Zhang2015a}, code summarization~\cite{Allamanis2016}, comment generation~\cite{Wong2013}, and code completion~\cite{Raychev2014}. \cc{Creating compilable code snippets mined from StackOverflow~\cite{Terragni2016}}. Previous applications of deep learning to compilers have involved program synthesis for performance benchmarking~\cite{Cummins2017a} and building optimization heuristics~\cite{Cummins2017b}. \cc{Revise claim in light of: Prior approaches to compiler input generation have shown proof-of-concept~\cite{Patra2016,Godefroid2017}, but we are the first to find dozens of errors in commercial and open source compilers?}
+% No work so far has exploited mined source code for test case generation. Ours is the first to do so~\cc{TODO: revise claim in light of TreeFuzz, Learn\&Fuzz, etc.}.
