Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11918,8 +11918,6 @@
     year = {2017},
     booktitle = {ISSTA},
     author = {Spieker, Helge and Gotlieb, Arnaud and Marijan, Dusica and Mossige, Morten},
-    isbn = {9781450350761},
-    doi = {10.1145/3092703.3092709},
     keywords = {by the research council, continuous integration, inforcement learning, machine learning, of norway, rcn, re-, regression testing, test case prioritization, test case selection, this work is supported, through the research-}
 }
 
@@ -12269,6 +12267,121 @@
     year = {2017},
     author = {Pradel, M. and Sen, K.},
     institution = {TU Darmstadt}
+}
+
+@inproceedings{Medeiros2007,
+    title = {{DEKANT: A Static Analysis Tool that Learns to Detect Web Application Vulnerabilities}},
+    year = {2016},
+    booktitle = {ISSTA},
+    author = {Medeiros, I. and Neves, N. and Correia, M.},
+    keywords = {@BULLETComputing methodologies → Machine learning, Keywords vulnerabilities, Web application security, machine learning, sequence models, software security, static anal-ysis, web application}
+}
+
+@inproceedings{Meng2016,
+    title = {{Binary code is not easy}},
+    year = {2016},
+    booktitle = {ISSTA},
+    author = {Meng, X. and Miller, B. P.},
+    isbn = {9781450343909},
+    doi = {10.1145/2931037.2931047},
+    keywords = {challenging code constructs, static binary code analysis}
+}
+
+@inproceedings{Terragni2016,
+    title = {{CSNIPPEX: automated synthesis of compilable code snippets from Q{\&}A sites}},
+    year = {2016},
+    booktitle = {ISSTA},
+    author = {Terragni, Valerio and Liu, Yepang and Cheung, Shing-Chi},
+    keywords = {crowd-generated snippets, developer social networks, pro-}
+}
+
+@inproceedings{Zhang2016c,
+    title = {{Predictive mutation testing}},
+    year = {2016},
+    booktitle = {ISSTA},
+    author = {Zhang, J. and Wang, Z. and Zhang, L. and Hao, D. and Zang, L. and Cheng, S. and Zhang, L.},
+    keywords = {machine learning, mutation testing, software testing}
+}
+
+@inproceedings{Wang2017a,
+    title = {{Faster Mutation Analysis via Equivalence Modulo States}},
+    year = {2017},
+    booktitle = {ISSTA},
+    author = {Wang, B. and Xiong, Y. and Shi, Y. and Zhang, L. and Hao, D.},
+    url = {http://arxiv.org/abs/1702.06689},
+    isbn = {9781450350761},
+    doi = {10.1145/3092703.3092714},
+    arxivId = {1702.06689}
+}
+
+@inproceedings{Yaneva2017a,
+    title = {{Compiler-assisted test acceleration on GPUs for embedded software}},
+    year = {2017},
+    booktitle = {ISSTA},
+    author = {Yaneva, V. and Rajan, A. and Dubach, C.},
+    isbn = {9781450350761},
+    doi = {10.1145/3092703.3092720},
+    keywords = {auto-, compilers, embedded software, functional testing, gpus}
+}
+
+@inproceedings{Loscher2017,
+    title = {{Targeted property-based testing}},
+    year = {2017},
+    booktitle = {ISSTA},
+    author = {L{\"{o}}scher, A. and Sagonas, K.},
+    url = {http://dl.acm.org/citation.cfm?doid=3092703.3092711},
+    isbn = {9781450350761},
+    doi = {10.1145/3092703.3092711},
+    keywords = {2017, acm reference format, andreas l{\"{o}}scher and konstantinos, proper, property-based testing, quickcheck, sagonas, search-based testing, targeted property-based}
+}
+
+@inproceedings{Daka2017a,
+    title = {{Generating unit tests with descriptive names or: would you name your children thing1 and thing2?}},
+    year = {2017},
+    booktitle = {ISSTA},
+    author = {Daka, E. and Rojas, J. M. and Fraser, G.},
+    keywords = {2017, acm reference format, automated unit test generation, ermira daka, generating unit, gordon fraser, jos{\'{e}} miguel rojas and, name synthesis, test naming}
+}
+
+@inproceedings{Braione2017,
+    title = {{Combining symbolic execution and search-based testing for programs with complex heap inputs}},
+    year = {2017},
+    booktitle = {ISSTA},
+    author = {Braione, P. and Denaro, G. and Mattavelli, A. and Pezz{\`{e}}, M.},
+    url = {http://dl.acm.org/citation.cfm?doid=3092703.3092715},
+    isbn = {9781450350761},
+    doi = {10.1145/3092703.3092715},
+    keywords = {-  Software and its engineering  ->  Software test, Formal software verification, acm reference format, automatic test case generation, search-based, software engineering, symbolic execution}
+}
+
+@article{Collingbourne2012,
+    title = {{Symbolic testing of OpenCL code}},
+    year = {2012},
+    journal = {Lecture Notes in Computer Science},
+    author = {Collingbourne, P. and Cadar, C. and Kelly, P. H. J.},
+    isbn = {9783642341878},
+    doi = {10.1007/978-3-642-34188-5{\_}18},
+    issn = {03029743}
+}
+
+@inproceedings{Palomba2017,
+    title = {{Automatic Test Case Generation: What if Test Code Quality Matters?}},
+    year = {2016},
+    booktitle = {ISSTA},
+    author = {Palomba, F. and Panichella, A. and Zaidman, A. and Oliveto, R. and De Lucia, A.},
+    volume = {1828},
+    keywords = {Multimodal learning analytics, Multimodal teaching analytics, STEM education, Sensors, Smart classroom, Smart school}
+}
+
+@inproceedings{Jan2016,
+    title = {{Automated and effective testing of web services for XML injection attacks}},
+    year = {2016},
+    booktitle = {ISSTA},
+    author = {Jan, S. and Nguyen, C. D. and Briand, L. C.},
+    url = {http://doi.acm.org/10.1145/2931037.2931042%5Cnhttp://dl.acm.org/citation.cfm?doid=2931037.2931042},
+    isbn = {9781450343909},
+    doi = {10.1145/2931037.2931042},
+    keywords = {XML injection, constraint solving, security testing}
 }
 
 @article{2017FindingTesting,
