--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -128,7 +128,7 @@ We filter data races, out-of-bounds and uninitialized accesses with GPUverify~\c
 
 Floating point operations in OpenCL can be imprecise, so code can produce different output on different testbeds. For this reason, CSmith and CLSmith do not support floating point operations. DeepSmith allows floating point operations but since it cannot apply differential testing on the outputs, it can detect all results except for the \emph{anomalous wrong-output} results.
 
-The last type of undefined behavior we observed comes from division by zero and related mathematical functions which require non-zero values. We apply a simple detection and filtering heuristic -- we change the input values and check to see if the output remains anomalous. While theoretically insufficient, in practice we found that no false positives remained. \cc{does this work for all of the div by zeros?}
+The last type of undefined behavior we observed comes from division by zero and related mathematical functions which require non-zero values. We apply a simple detection and filtering heuristic -- we change the input values and check to see if the output remains anomalous. While theoretically insufficient, in practice we found that no false positives remained.
 
 %\paragraph{Undefined Behaviors} % aka. unambiguous observable behaviour
 %Differential testing is valid only for programs that do not rely on undefined behavior. Detecting such cases is difficult, especially since OpenCL does not have the rich toolset of C, for example CompCert or UBSan. Some errors such as data races and out-of-bounds accesses can be caught with GPUverify~\cite{Betts2012} and Oclgrind, while compiler warnings may indicate undefined behavior (e.g. comparison between pointer and integer). For the rest, our approach does not rule out manual inspection. DeepSmith programs are short and easily interpretable, so manual inspection is feasible. Still, we have not yet discovered a false-positive result which was not trivially detectable by automated filtering.
