--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -14,7 +14,7 @@ DeepSmith\footnote{DeepSmith available at: \emph{[URL redacted for double-blind 
 
 \subsection{Generative Model}
 
-Generating test cases for compilers is hard because their inputs are highly structured. Producing text with the right structure requires expert knowledge and a significant engineering effort, which has to be repeated from scratch for each new language. Instead, we treat the problem as an unsupervised machine learning task, employing state-of-the-art deep learning techniques to build models for how humans write programs, extending prior work on synthetic benchmark generation~\cite{Cummins2017a} and lifting it to the compiler testing domain. Contrary to existing tools, this approach is language agnostic, is only a few hundred lines of code, and requires little effort to design.
+Generating test cases for compilers is hard because their inputs are highly structured. Producing text with the right structure requires expert knowledge and a significant engineering effort, which has to be repeated from scratch for each new language. Instead, we treat the problem as an unsupervised machine learning task, employing state-of-the-art deep learning techniques to build models for how humans write programs, \cc{TODO: rephrase this} extending prior work on synthetic benchmark generation~\cite{Cummins2017a} and lifting it to the compiler testing domain. Contrary to existing tools, this approach is language agnostic, is only a few hundred lines of code, and requires little effort to design.
 
 \paragraph{Training Programs} The generative model needs to be trained on a set of OpenCL kernels. The authors of~\cite{Cummins2017a} provided us with a corpus of approximately 10k OpenCL kernels, mined from GitHub. These millions of lines of code are a representative sample of OpenCL code. Those authors had already preprocessed the kernels to be more suited to model training. This included the following steps.
 
