--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -73,5 +73,9 @@ Compared to all these, our fuzzing approach is low cost, easy to develop, portab
 Deep Learning is a nascent field that is responsible for a multitude of breakthroughs in modeling rich, hierarchical datasets. The major milestones are reviewed in~\cite{Wang2017}, and methods in~\cite{Schmidhuber2014}. In software testing,
 machine learning has been successfully applied before on areas such as improving bug finding static analyzers~\cite{Heo2017,Koc2017}, repairing programs~\cite{Koukoutos2017a,White}, prioritizing test programs~\cite{Chen2017}, identifying buffer overruns~\cite{Choi2016}, and processing bug reports~\cite{Lam2016,Huo2016}.
 
-There is an increasing interest in mining source code repositories at large scale~\cite{Allamanis2013a,White2015a,Bird2009}. Previous studies have involved data mining of GitHub to analyze software engineering practices~\cite{Wu2014,Guzman2014,Baishakhi2014a,Vasilescu2015}, for example code generation~\cite{Zhang2015a}, code summarization~\cite{Allamanis2016}, comment generation~\cite{Wong2013}, and code completion~\cite{Raychev2014}. \cc{Creating compilable code snippets mined from StackOverflow~\cite{Terragni2016}}. Previous applications of deep learning to compilers have involved program synthesis for performance benchmarking~\cite{Cummins2017a} and building optimization heuristics~\cite{Cummins2017b}. \cc{Revise claim in light of: Prior approaches to compiler input generation have shown proof-of-concept~\cite{Patra2016,Godefroid2017}, but we are the first to find dozens of errors in commercial and open source compilers?}
+There is an increasing interest in mining source code repositories at large scale~\cite{Allamanis2017a}. 
+
+\cc{Using machine learning to inductive program synthesis~\cite{Parisotto2016,Balog2017}.}
+
+Previous studies have involved data mining of GitHub to analyze software engineering practices~\cite{Wu2014,Guzman2014,Baishakhi2014a,Vasilescu2015}, for example code generation~\cite{Zhang2015a}, code summarization~\cite{Allamanis2016}, comment generation~\cite{Wong2013}, and code completion~\cite{Raychev2014}. \cc{Creating compilable code snippets mined from StackOverflow~\cite{Terragni2016}}. Previous applications of deep learning to compilers have involved program synthesis for performance benchmarking~\cite{Cummins2017a} and building optimization heuristics~\cite{Cummins2017b}. \cc{Revise claim in light of: Prior approaches to compiler input generation have shown proof-of-concept~\cite{Patra2016,Godefroid2017}, but we are the first to find dozens of errors in commercial and open source compilers?}
 % No work so far has exploited mined source code for test case generation. Ours is the first to do so~\cc{TODO: revise claim in light of TreeFuzz, Learn\&Fuzz, etc.}.
