--- a/abstract.tex
+++ b/abstract.tex
@@ -4,7 +4,7 @@
 % Our approach complements the desires of compiler developers, who desire small test cases based on ``plausible'' language constructs.
 % \vspace{2mm}
 
-% OLD ABSTRACT: Compilers should produce correct code for valid inputs, and meaningful errors for invalid inputs. Failure to do so can hinder software development or even cause catastrophic runtime errors. Still, properly testing compilers is hard. Manually assembled test suites cannot cover the enormous range of possible inputs. %
+% OLD ABSTRACT: Compilers should produce correct code for valid inputs, and meaningful errors for invalid inputs. Failure to do so can hinder software development or even cause catastrophic runtime errors. Still, properly testing compilers is hard. Manually assembled test suites cannot cover the enormous range of possible inputs.
 
 %
 % Random program generators come close to it but they require extensive development effort for every language supported by the compiler, and often leave parts of the language space untested. A better way for testing compilers is needed.
