Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11917,8 +11917,7 @@
     title = {{Reinforcement Learning for Automatic Test Case Prioritization and Selection in Continuous Integration}},
     year = {2017},
     booktitle = {ISSTA},
-    author = {Spieker, Helge and Gotlieb, Arnaud and Marijan, Dusica and Mossige, Morten},
-    keywords = {by the research council, continuous integration, inforcement learning, machine learning, of norway, rcn, re-, regression testing, test case prioritization, test case selection, this work is supported, through the research-}
+    author = {Spieker, Helge and Gotlieb, Arnaud and Marijan, Dusica and Mossige, Morten}
 }
 
 @inproceedings{Yaneva2017,
@@ -12382,6 +12381,75 @@
     isbn = {9781450343909},
     doi = {10.1145/2931037.2931042},
     keywords = {XML injection, constraint solving, security testing}
+}
+
+@article{Creswell2017,
+    title = {{Generative Adversarial Networks: An Overview}},
+    year = {2017},
+    journal = {arXiv:1710.07035},
+    author = {Creswell, A. and White, T. and Dumoulin, V. and Arulkumaran, K. and Sengupta, B. and Bharath, A. A.}
+}
+
+@article{Tassa2018,
+    title = {{DeepMind Control Suite}},
+    year = {2018},
+    journal = {arXiv:1801.00690},
+    author = {Tassa, Y. and Doron, Y. and Muldal, A. and Erez, T. and Li, Y. and De, D. and Casas, L. and Budden, D. and Abdolmaleki, A. and Merel, J. and Lefrancq, A. and Lillicrap, T. and Riedmiller, M.}
+}
+
+@article{Marcus,
+    title = {{Deep Learning: A Critical Appraisal}},
+    year = {2018},
+    journal = {arXiv:1801.00631},
+    author = {Marcus, G.}
+}
+
+@article{DeBoom2018,
+    title = {{Character-level Recurrent Neural Networks in Practice: Comparing Training and Sampling Schemes}},
+    year = {2018},
+    journal = {arXiv:1801.00632},
+    author = {De Boom, C. and Dhoedt, B. and Demeester, T.},
+    keywords = {backpropagation through time, deep learning, optimization, performance, recurrent neural networks}
+}
+
+@article{Giryes2016,
+    title = {{Mathematics of Deep Learning}},
+    year = {2017},
+    journal = {arXiv:1712.04741},
+    author = {Vidal, R. and Bruna, J. and Giryes, R. and Soatto, S.}
+}
+
+@article{Li2017,
+    title = {{Deep Reinforcement Learning: An Overview}},
+    year = {2017},
+    journal = {arXiv:1701.07274},
+    author = {Li, Y.},
+    url = {http://arxiv.org/abs/1701.07274},
+    isbn = {9781509011216},
+    doi = {10.1007/978-3-319-56991-8{\_}32},
+    issn = {1701.07274},
+    arxivId = {1701.07274}
+}
+
+@article{Poggio2017,
+    title = {{Theory of Deep Learning III: explaining the non-overfitting puzzle}},
+    year = {2018},
+    journal = {arXiv:1801.00173},
+    author = {Poggio, T. and Kawaguchi, K. and Liao, Q. and Miranda, B. and Rosasco, L. and Boix, X. and Hidary, J. and Mhaskar, H.}
+}
+
+@article{Parisotto2016,
+    title = {{Neuro-Symbolic Program Synthesis}},
+    year = {2016},
+    journal = {arXiv:1611.01855},
+    author = {Parisotto, E. and Mohamed, A. and Singh, R. and Li, L. and Zhou, D. and Kohli, P.}
+}
+
+@article{Wang2017b,
+    title = {{Program Synthesis using Abstraction Refinement}},
+    year = {2017},
+    journal = {arXiv:1710.07740},
+    author = {Wang, X. and Dillig, I. and Singh, R.}
 }
 
 @article{2017FindingTesting,
