--- a/preamble.tex
+++ b/preamble.tex
@@ -76,7 +76,8 @@
 \newcommand{\pp}[1]{{\color{cyan}{\emph{(PP)} #1}}}
 \newcommand{\am}[1]{{\color{purple}{\emph{(AM)} #1}}}
 
-\newcommand{\factcheck}[1]{{\color{red}{#1}}}
+% \newcommand{\factcheck}[1]{{\color{red}{#1}}}
+\newcommand{\factcheck}[1]{#1}
 
 % Tables.
 \usepackage{booktabs}
