--- a/paper.tex
+++ b/paper.tex
@@ -2,7 +2,8 @@
 
 \begin{document}
 
-\title{Low Cost and Effective Compiler Fuzzing through Deep Learning}
+\title{%Low Cost and Effective
+	Compiler Fuzzing through Deep Learning}
 \input{abstract}
 \maketitle
 
