--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -424,18 +424,45 @@ Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this exp
 The results emphasize that compiler validation is a moving target. Every change and feature addition has the potential to introduce regressions or new failure cases. Since LLVM will not release unless their compiler passes their own extensive test suites, this also reinforces the case for compiler fuzzing. We believe our approach provides an effective means for the generation of such fuzzers, at a fraction of the cost of existing techniques.
 
 
-\section{Extensibility}
+\subsection{Extensibility of Language Model}
 
-\cc{Staging ground for notes on extensibility:}
-
-\paragraph{Solidity}
+\cc{I don't know how we are going to merge this into the rest of the text:}
 
 Solidity, the programming language of the Ethereum Blockchain. Very young language, little time to develop tooling (yet still very important - money is involved!). Syntax based on JavaScript.
 
-Method: Scraped GitHub for solidity sources. Recursively inlined imported modules in a manner similar to~\cite{Cummins2017a}. No preprocessor (Solidity doesn't have one), just code formatting using clangformat. Encoded corpus using list of keywords from language (required no more language expertise than a syntax highlighter). Trained model in the same manner as OpenCL. Simple compile-only test harness for reference compiler \texttt{solc}.
+Method: Assembled corpus from scraped solidity files on GitHub. Recursively inlined imported modules. No variable renaming, just code formatting using clangformat. Encoded corpus using combination of tokens and characters (super easy list of tokens were taken from a syntax highlighter). Trained model in the same manner as OpenCL. Simple compile-only test harness. Two testbeds: reference compiler \texttt{solc} with optimizations on or off.
 
 Results: Found a compiler crash caused by missing error handling of language features.
+% Unimplemented feature:
+% /build/solc-GCChSM/solc-0.4.18/libsolidity/codegen/CompilerUtils.cpp(499): Throw in function void dev::solidity::CompilerUtils::convertType(const dev::solidity::Type&, const dev::solidity::Type&, bool, bool, bool)
+% Dynamic exception type: boost::exception_detail::clone_impl<dev::solidity::UnimplementedFeatureError>
+% std::exception::what: Not yet implemented - FixedPointType.
+% [dev::tag_comment*] = Not yet implemented - FixedPointType.
 
-\subsection{Other Notes on Extensibility}
+\cc{And one case where the compiler silently crashes when optimizations are enabled.}
+% select * from results
+% left join testcases on results.testcase_id=testcases.id
+% left join programs on testcases.program_id=programs.id
+% left join stderrs on results.stderr_id=stderrs.id
+% where programs.generator=1
+% and results.id=135558;
 
-This approach could be combined with symbolic execution to drive more complex structured inputs~\cite{Braione2017}.
+\cc{And one compiler assertion in the emscripten compiled version.}
+% /usr/local/lib/node_modules/solc/soljson.js:1
+% (function (exports, require, module, __filename, __dirname) { var Module;if(!Module)Module=(typeof Module!=="undefined"?Module:null)||{};var moduleOverrides={};for(var key in Module){if(Module.hasOwnProperty(key)){moduleOverrides[key]=Module[key]}}var ENVIRONMENT_IS_WEB=typeof window==="object";var ENVIRONMENT_IS_WORKER=typeof importScripts==="function";var ENVIRONMENT_IS_NODE=typeof process==="object"&&typeof require==="function"&&!ENVIRONMENT_IS_WEB&&!ENVIRONMENT_IS_WORKER;var ENVIRONMENT_IS_SHELL=!ENVIRONMENT_IS_WEB&&!ENVIRONMENT_IS_NODE&&!ENVIRONMENT_IS_WORKER;if(ENVIRONMENT_IS_NODE){if(!Module["print"])Module["print"]=function print(x){process["stdout"].write(x+"\n")};if(!Module["printErr"])Module["printErr"]=function printErr(x){process["stderr"].write(x+"\n")};var nodeFS=require("fs");var nodePath=require("path");Module["read"]=function read(filename,binary){filename=nodePath["normalize"](filename);var ret=nodeFS["readFileSync"](filename);if(!ret&&filenam
+% abort() at Error
+%     at jsStackTrace (/usr/local/lib/node_modules/solc/soljson.js:1:19718)
+%     at stackTrace (/usr/local/lib/node_modules/solc/soljson.js:1:19901)
+%     at Object.abort (/usr/local/lib/node_modules/solc/soljson.js:18:10818)
+%     at _abort (/usr/local/lib/node_modules/solc/soljson.js:1:828102)
+%     at gIa (/usr/local/lib/node_modules/solc/soljson.js:9:380344)
+%     at rFa (/usr/local/lib/node_modules/solc/soljson.js:9:305250)
+%     at oxa (/usr/local/lib/node_modules/solc/soljson.js:8:845873)
+%     at Array._wa (/usr/local/lib/node_modules/solc/soljson.js:8:813044)
+%     at Object.GZa [as dynCall_iiiiii] (/usr/local/lib/node_modules/solc/soljson.js:9:725673)
+%     at invoke_iiiiii (/usr/local/lib/node_modules/solc/soljson.js:1:863594)
+% If this abort() is unexpected, build with -s ASSERTIONS=1 which can give more information.
+
+
+
+\cc{Other Notes on Extensibility:} This approach could be combined with symbolic execution to drive more complex structured inputs~\cite{Braione2017}. For dynamic languages, the test process would be the same, only without the separate compilation step and possibility for ``compile-only'' stubs.
